Add support for root file templates.
Change wizard and pxr dataobject to support added templates.
Add root template extraction to component downloader.
Also allow subgraphs to be in any palette category.
Update pxr dataobject parsing for type and root ID without using file attributes.
Make sure root files get default icon if not parsed.
Make template manager visible in menu.